k8s-up-and-running/host-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: host-ingress
spec:
    rules:
        - host: alpaca.vascoalramos.me
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: alpaca
                        servicePort: 8080
        - host: bandicoot.vascoalramos.me
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: bandicoot
                        servicePort: 8080
