k8s-up-and-running/simple-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: simple-ingress
spec:
    backend:
        serviceName: alpaca
        servicePort: 8080
